Initial landing page * Create credit score field * Use credit score field on landing page and lead page * Create relevant css & js files

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
   "/js/app.js": "/js/app.js",
-  "/css/app.css": "/css/app.css"
+  "/css/app.css": "/css/app.css",
+  "/css/landing_page.css": "/css/landing_page.css",
+  "/js/landing_page.js": "/js/landing_page.js"
 }
