--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
+        "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laravel/dusk": "^2.0",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0",
-				"filp/whoops": "~2.0"
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
